2010-03-11  Noel O'Boyle

	* src/ops/unique.cpp: Enable compilation with the help of Boost on
	GCC 3.4. Note to self, don't compile if Boost not found.

2010-03-10  Matt Sprague  <mesprague@gmail.com>

	* src/formats/xml/xml.cpp: Add call to xmlInitParser() to support
	the use of xml formats in multithreaded environments.

2010-03-08  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/formats/mdlformat.cpp: Check atom symbols for isotopes like
	'D' or 'T'. Solves some inchiwrite failures.

	* src/alias.cpp: Downgrade errors over superatom.txt to warnings.

2010-03-06  Konstantin Tokarev

	* include/openbabel/obmolecformat.h: use tr1::unordered_map instead 
	of map when compiling with GCC 4.x

2010-03-06  Noel O'Boyle

	* src/formats/inchiformat.cpp, mdlformat.cpp: Moved warning about 0D
	from InChI to MDL where it should have been in the first place.

2010-03-05  Tim Vandermeersch

        * test/files/stereo/*: Add test structures from Razinger paper.

        * include/openbabel/graphsym.h, src/graphsym.cpp: Add parameter for 
        NOT taking stereochemistry into account.

        * test/graphsymtest.cpp: Use added files for unit testing (i.e. check 
        if the right number of symmetry classes are found). Also, the unit 
        test was using std::unique wrong (without sorting first), the two 
        failing test cases now pass. The is a new failing test though:
        test/files/stereo/razinger_fig7_1.mol All atoms get the same symmetry 
        class, it is a very simple structure though...

2010-03-05  Noel O'Boyle

	* CMakeLists.txt: Require GCC >=4.2 for visibility support

2010-03-04  Noel O'Boyle

	* test/files/testsym_2Dtests.sdf: Forgot to add test file

	* src/stereo/perception.cpp: In TetrahedralFrom3D, if a bond to the
	chiral center IsWedgeOrHash then make the stereo object unspecified.
	* src/builder.cpp: Fix logic when correcting cistrans stereo
	* test/testsym.py: The long-promised stereo tests that flushed out